--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-10 offset-md-1">
-                  <div class="titlepage">
+                  <div class="titlepage" id="custom-scope2">
                      <h2>Our Glasses</h2>
                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor
                         e et dolore magna aliqua. Ut enim ad minim veniam, qui
