--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                      <h2>About Our Shop</h2>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
                   </div>
-                  <a class="read_more" href="#">Read More</a>
+                  <a class="read_more" href="#" id="about-track">Read More</a>
                </div>
             </div>
          </div>
