--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <script src="https://assets.adobedtm.com/6268dc4b6b26/8a68eb914b58/launch-464c8314b318-development.min.js" async></script>
 
 <script>
-  !function(e,a,n,t){var i=e.head;if(i){
+  /* !function(e,a,n,t){var i=e.head;if(i){
   if (a) return;
   var o=e.createElement("style");
   o.id="alloy-prehiding",o.innerText=n,i.appendChild(o),setTimeout(function(){o.parentNode&&o.parentNode.removeChild(o)},t)}}
-  (document, document.location.href.indexOf("adobe_authoring_enabled") !== -1, "body { opacity: 0 !important }", 3000);
+  (document, document.location.href.indexOf("adobe_authoring_enabled") !== -1, "body { opacity: 0 !important }", 3000); */
 </script>
 
 <script>
