--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <!-- mobile metas -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <meta property="og:image" content="https://www.australia.com/content/dam/digital/australia-com/images/victoria/melbourne/melbourne-vic-6334.jpg">
       <!-- site metas -->
       <title>sungla</title>
       <meta name="keywords" content="">
